--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-image: url('alamah.jpg')";>
+<body style="background-image: url('alamahh.jpg')";>
 <head>
 	<title>BIODATA</title>
 	<p></p>
