--- a/index2.html
+++ b/index2.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html>
 <body style="background-image: url('alamahh.jpg')";>
-<head>
-	<title>BIODATA</title>
+<head><center><h1 style="color : #698474 ;background-color: #dee3e2; border: 1px solid black">Biodata</u></font></h1></center>	
+	<title></title>
 	<style type="text/css">
-		h2 {color: #806699; border:2px dashed black;}
 	</style>
+	
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<p></p>
 </head>
 <body>
-	<h1 style="color: red; border: 3px solid black;" align="center">BIODATA</h1>
-	<h2 align="left">Profil Singkat</h2>
-	<p> Saya adalah anak terakhir dari 4 bersaudara, saya sekarang akan berusia 17 tahun, saya sangat ingin dapat menikmati masa muda saya dengan senang. Saya sangat ingin bisa mengendarai motor, tapi saya naik sepeda aja ga bisa sama sekali, jadinya kemana-mana saya selalu dianter sama kaka-kaka saya. Tapi sekarang saya kemana-mana sendiri soalnya kakak-kakak saya udah ga tinggal di rumah lagi.</p>
-	<p> Setelah lulus nanti saya ingin bisa pergi keliling dunia sama orang yang saya sayangi, saya sangat ingin dapat mempunyai kenangan-kenangan indah. </p>
-	<h3 align="center">FOTO</h3>
 	<img src="pas_photo.jpg" width="312px" height="416px" style="display: block; margin: auto;">
-
-	<h4 align="left">Biodata singkat</h4>
+	
+	<h1 align="center"></h4>
 	<p>Nama					: Alamah Ulzanati Habibullah</p>
 	<p>Tempat Tanggal lahir	: Bogor, 21 Mei 2003</p>
 	<p>Pendidikan			: SMK SMAK Bogor</p>
-	<P>Jenis Kelamin		: Perempuan
+	<P>Jenis Kelamin		: Perempuan </P>
 	<p>Hobi 				: Mendengarkan musik</p>
-	<p>Makanan Favorit		: Suka semua</p>
-	<p>Minuman Favorit		: Air Mineral </p>
+	<p>Makanan Favorit		: Semua</p>
+	<p>Minuman Favorit		: Air Mineral</p>
 	<P>Cita-cita			: Banyak uang dan keliling dunia </P>
-	<P>Alamat				: jl. Abdul Fatah, Tenjolaya Bogor</P>
-
-
-
+	<P>Alamat				: Jl. Abdul Fatah, Tenjolaya Bogor</P>
+	<h2 align="center">Tentang Alamah</h2>
+	<p>  Saya adalah anak terakhir dari 4 bersaudara, saya sekarang akan berusia 17 tahun, saya sangat ingin dapat menikmati masa muda saya dengan senang. Saya sangat ingin bisa mengendarai motor, tapi saya naik sepeda aja ga bisa sama sekali, jadinya kemana-mana saya selalu dianter sama kaka-kaka saya. Tapi sekarang saya kemana-mana sendiri soalnya kakak-kakak saya udah ga tinggal di rumah lagi.</br>Setelah lulus nanti saya ingin bisa pergi keliling dunia sama orang yang saya sayangi, saya sangat ingin dapat mempunyai kenangan-kenangan indah.
+	
 </body>
 </html>
